--- a/boards/shields/stag68/stag68.conf
+++ b/boards/shields/stag68/stag68.conf
@@ -3,12 +3,12 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-CONFIG_ZMK_DISPLAY=n
+# CONFIG_ZMK_DISPLAY=n
 
-CONFIG_SETTINGS=y
+# CONFIG_SETTINGS=y
 # CONFIG_ZMK_STUDIO=y
 
-CONFIG_ZMK_SPLIT=n
+# CONFIG_ZMK_SPLIT=n
 
 #Config power
 # CONFIG_ZMK_EXT_POWER=y
@@ -33,11 +33,11 @@ CONFIG_ZMK_SPLIT=n
 # may take a few seconds to reconnect after waking.
 
 # (30s) Milliseconds of inactivity before entering idle state
-CONFIG_ZMK_IDLE_TIMEOUT=30000
+# CONFIG_ZMK_IDLE_TIMEOUT=30000
 # Enable deep sleep support
-CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_SLEEP=y
 # (15 min) Milliseconds of inactivity before entering deep sleep
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # CONFIG_ZMK_RGB_UNDERGLOW=n
 # Use the STRIP config specific to the LEDs you're using
