Fix: register custom shield with CMake

--- a/config/boards/shields/handwired_68/handwired_68.conf
+++ b/config/boards/shields/handwired_68/handwired_68.conf
@@ -1,3 +1,1 @@
-CONFIG_ZMK_MATRIX_SCAN_PERIOD=1
-CONFIG_ZMK_MATRIX_DEBOUNCE_PRESS_MS=5
-CONFIG_ZMK_MATRIX_DEBOUNCE_RELEASE_MS=5
+# CONFIG_ZMK_MATRIX_TRANSFORM=y
