--- a/config/boards/shields/handwired_68/handwired_68.conf
+++ b/config/boards/shields/handwired_68/handwired_68.conf
@@ -1,3 +1,40 @@
 # CONFIG_ZMK_MATRIX_TRANSFORM=y
 # CONFIG_ZMK_USB_LOGGING=y
 
+CONFIG_ZMK_USB=y
+CONFIG_USB_DEVICE_STACK=y
+
+# CONFIG_LOG=y
+# CONFIG_LOG_DEFAULT_LEVEL=4
+# CONFIG_SETTINGS=y
+# CONFIG_ZMK_STUDIO=y
+
+CONFIG_BT_DEVICE_NAME="Tommy68"
+CONFIG_BT_EXT_ADV=y
+CONFIG_BT_DEVICE_NAME_DYNAMIC=y
+
+#Config power
+CONFIG_ZMK_EXT_POWER=y
+
+#Stronger Bluetooth
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+#Sleep
+
+# Configuration for entering low power modes when the keyboard is idle.
+# In the idle state, peripherals such as displays and lighting are disabled,
+# but the keyboard remains connected to Bluetooth so it can immediately respond
+# when you press a key.
+# In the deep sleep state, the keyboard additionally disconnects from Bluetooth and
+# any external power output is disabled. This state uses very little power, but it
+# may take a few seconds to reconnect after waking.
+
+# (30s) Milliseconds of inactivity before entering idle state
+CONFIG_ZMK_IDLE_TIMEOUT=30000
+# Enable deep sleep support
+CONFIG_ZMK_SLEEP=y
+# (15 min) Milliseconds of inactivity before entering deep sleep
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
