--- a/build.yaml
+++ b/build.yaml
@@ -20,5 +20,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield:
-    snippet: zmk-usb-logging
+    shield: handwired_68
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
