--- a/config/boards/shields/handwired_68/handwired_68.conf
+++ b/config/boards/shields/handwired_68/handwired_68.conf
@@ -7,9 +7,10 @@ CONFIG_USB_DEVICE_STACK=y
 # CONFIG_LOG=y
 # CONFIG_LOG_DEFAULT_LEVEL=4
 # CONFIG_SETTINGS=y
-# CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
 
-CONFIG_BT_DEVICE_NAME="Tommy68"
+CONFIG_BT_DEVICE_NAME="handwired_68"
 CONFIG_BT_EXT_ADV=y
 CONFIG_BT_DEVICE_NAME_DYNAMIC=y
 
@@ -38,3 +39,6 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+CONFIG_SERIAL=y
+CONFIG_UART_CONSOLE=n
